--- a/src/components/image-slider/image-nav-button-section/ImageNavButtonSection.css
+++ b/src/components/image-slider/image-nav-button-section/ImageNavButtonSection.css
@@ -24,3 +24,9 @@
     transform: translate(-50%,-50%);
     pointer-events: none;
 }
+
+.button_tooltip_wrapper{
+    position: relative;
+    display: inline-block;
+    height: 100%;
+}
